--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
     <color name="divider">#BDBDBD</color>
     <color name="black">#000000</color>
     <color name="grey">#9A9A9A</color>
+    <color name="grey1">#636363</color>
     <color name="grey_light">#F8F8F8</color>
     <color name="gold_light">#FFF6DC</color>
     <color name="gold">#F7BA00</color>
